parser.out
Grammar:

Rule 0     S' -> MYSTATEMENTLIST
Rule 1     MYSTATEMENTLIST -> MYSTATEMENT
Rule 2     MYSTATEMENTLIST -> MYSTATEMENT MYSTATEMENTLIST
Rule 3     MYSTATEMENT -> MYASSIGN SEMICOLON
Rule 4     MYSTATEMENT -> MYAVERAGE SEMICOLON
Rule 5     MYAVERAGE -> AVERAGE EXPRLIST MYSCOPE MYFOR MYWHILE MYTO MYNOOPTIMIZE
Rule 6     MYSCOPE -> <empty>
Rule 7     MYSCOPE -> REST
Rule 8     MYSCOPE -> RECORD NUMBERLIST
Rule 9     MYSCOPE -> NEXT NUMBER
Rule 10    MYSCOPE -> ALL
Rule 11    MYFOR -> <empty>
Rule 12    MYFOR -> FOR CONDITIONEXPR
Rule 13    MYWHILE -> <empty>
Rule 14    MYWHILE -> WHILE CONDITIONEXPR
Rule 15    MYTO -> <empty>
Rule 16    MYTO -> TO IDENTIFIER
Rule 17    MYTO -> TOARRAY IDENTIFIER
Rule 18    MYNOOPTIMIZE -> <empty>
Rule 19    MYNOOPTIMIZE -> NOOPTIMIZE
Rule 20    EXPRLIST -> EXPR
Rule 21    EXPRLIST -> EXPR COMMA EXPRLIST
Rule 22    MYASSIGN -> IDENTIFIER ASSIGN EXPR
Rule 23    EXPR -> OP EXPR CP
Rule 24    EXPR -> EXPR DIVIDE EXPR  [precedence=left, level=5]
Rule 25    EXPR -> EXPR MULTIPLY EXPR  [precedence=left, level=5]
Rule 26    EXPR -> EXPR MINUS EXPR  [precedence=left, level=4]
Rule 27    EXPR -> EXPR PLUS EXPR  [precedence=left, level=4]
Rule 28    EXPR -> IDENTIFIER
Rule 29    EXPR -> NUMBER
Rule 30    CONDITIONEXPR -> OP CONDITIONEXPR CP
Rule 31    CONDITIONEXPR -> CONDITIONEXPR OR CONDITIONEXPR  [precedence=left, level=2]
Rule 32    CONDITIONEXPR -> CONDITIONEXPR AND CONDITIONEXPR  [precedence=left, level=2]
Rule 33    CONDITIONEXPR -> EXPR EQUAL EXPR  [precedence=nonassoc, level=3]
Rule 34    CONDITIONEXPR -> EXPR NEQ EXPR  [precedence=nonassoc, level=3]
Rule 35    CONDITIONEXPR -> EXPR LEQ EXPR  [precedence=nonassoc, level=3]
Rule 36    CONDITIONEXPR -> EXPR GEQ EXPR  [precedence=nonassoc, level=3]
Rule 37    CONDITIONEXPR -> EXPR GREATER EXPR  [precedence=nonassoc, level=3]
Rule 38    CONDITIONEXPR -> EXPR LESS EXPR  [precedence=nonassoc, level=3]
Rule 39    CONDITIONEXPR -> NOT CONDITIONEXPR  [precedence=right, level=1]
Rule 40    CONDITIONEXPR -> FALSE
Rule 41    CONDITIONEXPR -> TRUE
Rule 42    NUMBERLIST -> NUMBER
Rule 43    NUMBERLIST -> NUMBER COMMA NUMBERLIST

Terminals, with rules where they appear:

ALL                  : 10
AND                  : 32
ASSIGN               : 22
AVERAGE              : 5
COMMA                : 21 43
CP                   : 23 30
DIVIDE               : 24
EQUAL                : 33
FALSE                : 40
FOR                  : 12
GEQ                  : 36
GREATER              : 37
IDENTIFIER           : 16 17 22 28
LEQ                  : 35
LESS                 : 38
MINUS                : 26
MULTIPLY             : 25
NEQ                  : 34
NEXT                 : 9
NOOPTIMIZE           : 19
NOT                  : 39
NUMBER               : 9 29 42 43
OP                   : 23 30
OR                   : 31
PLUS                 : 27
RECORD               : 8
REST                 : 7
SEMICOLON            : 3 4
TO                   : 16
TOARRAY              : 17
TRUE                 : 41
WHILE                : 14
error                : 

Nonterminals, with rules where they appear:

CONDITIONEXPR        : 12 14 30 31 31 32 32 39
EXPR                 : 20 21 22 23 24 24 25 25 26 26 27 27 33 33 34 34 35 35 36 36 37 37 38 38
EXPRLIST             : 5 21
MYASSIGN             : 3
MYAVERAGE            : 4
MYFOR                : 5
MYNOOPTIMIZE         : 5
MYSCOPE              : 5
MYSTATEMENT          : 1 2
MYSTATEMENTLIST      : 2 0
MYTO                 : 5
MYWHILE              : 5
NUMBERLIST           : 8 43


state 0

    (0) S' -> . MYSTATEMENTLIST
    (1) MYSTATEMENTLIST -> . MYSTATEMENT
    (2) MYSTATEMENTLIST -> . MYSTATEMENT MYSTATEMENTLIST
    (3) MYSTATEMENT -> . MYASSIGN SEMICOLON
    (4) MYSTATEMENT -> . MYAVERAGE SEMICOLON
    (22) MYASSIGN -> . IDENTIFIER ASSIGN EXPR
    (5) MYAVERAGE -> . AVERAGE EXPRLIST MYSCOPE MYFOR MYWHILE MYTO MYNOOPTIMIZE
    IDENTIFIER      shift and go to state 5
    AVERAGE         shift and go to state 6

    MYSTATEMENTLIST                shift and go to state 1
    MYSTATEMENT                    shift and go to state 2
    MYASSIGN                       shift and go to state 3
    MYAVERAGE                      shift and go to state 4

state 1

    (0) S' -> MYSTATEMENTLIST .


state 2

    (1) MYSTATEMENTLIST -> MYSTATEMENT .
    (2) MYSTATEMENTLIST -> MYSTATEMENT . MYSTATEMENTLIST
    (1) MYSTATEMENTLIST -> . MYSTATEMENT
    (2) MYSTATEMENTLIST -> . MYSTATEMENT MYSTATEMENTLIST
    (3) MYSTATEMENT -> . MYASSIGN SEMICOLON
    (4) MYSTATEMENT -> . MYAVERAGE SEMICOLON
    (22) MYASSIGN -> . IDENTIFIER ASSIGN EXPR
    (5) MYAVERAGE -> . AVERAGE EXPRLIST MYSCOPE MYFOR MYWHILE MYTO MYNOOPTIMIZE
    $end            reduce using rule 1 (MYSTATEMENTLIST -> MYSTATEMENT .)
    IDENTIFIER      shift and go to state 5
    AVERAGE         shift and go to state 6

    MYSTATEMENT                    shift and go to state 2
    MYSTATEMENTLIST                shift and go to state 7
    MYASSIGN                       shift and go to state 3
    MYAVERAGE                      shift and go to state 4

state 3

    (3) MYSTATEMENT -> MYASSIGN . SEMICOLON
    SEMICOLON       shift and go to state 8


state 4

    (4) MYSTATEMENT -> MYAVERAGE . SEMICOLON
    SEMICOLON       shift and go to state 9


state 5

    (22) MYASSIGN -> IDENTIFIER . ASSIGN EXPR
    ASSIGN          shift and go to state 10


state 6

    (5) MYAVERAGE -> AVERAGE . EXPRLIST MYSCOPE MYFOR MYWHILE MYTO MYNOOPTIMIZE
    (20) EXPRLIST -> . EXPR
    (21) EXPRLIST -> . EXPR COMMA EXPRLIST
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPRLIST                       shift and go to state 11
    EXPR                           shift and go to state 12

state 7

    (2) MYSTATEMENTLIST -> MYSTATEMENT MYSTATEMENTLIST .
    $end            reduce using rule 2 (MYSTATEMENTLIST -> MYSTATEMENT MYSTATEMENTLIST .)


state 8

    (3) MYSTATEMENT -> MYASSIGN SEMICOLON .
    IDENTIFIER      reduce using rule 3 (MYSTATEMENT -> MYASSIGN SEMICOLON .)
    AVERAGE         reduce using rule 3 (MYSTATEMENT -> MYASSIGN SEMICOLON .)
    $end            reduce using rule 3 (MYSTATEMENT -> MYASSIGN SEMICOLON .)


state 9

    (4) MYSTATEMENT -> MYAVERAGE SEMICOLON .
    IDENTIFIER      reduce using rule 4 (MYSTATEMENT -> MYAVERAGE SEMICOLON .)
    AVERAGE         reduce using rule 4 (MYSTATEMENT -> MYAVERAGE SEMICOLON .)
    $end            reduce using rule 4 (MYSTATEMENT -> MYAVERAGE SEMICOLON .)


state 10

    (22) MYASSIGN -> IDENTIFIER ASSIGN . EXPR
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 16

state 11

    (5) MYAVERAGE -> AVERAGE EXPRLIST . MYSCOPE MYFOR MYWHILE MYTO MYNOOPTIMIZE
    (6) MYSCOPE -> .
    (7) MYSCOPE -> . REST
    (8) MYSCOPE -> . RECORD NUMBERLIST
    (9) MYSCOPE -> . NEXT NUMBER
    (10) MYSCOPE -> . ALL
    FOR             reduce using rule 6 (MYSCOPE -> .)
    WHILE           reduce using rule 6 (MYSCOPE -> .)
    TO              reduce using rule 6 (MYSCOPE -> .)
    TOARRAY         reduce using rule 6 (MYSCOPE -> .)
    NOOPTIMIZE      reduce using rule 6 (MYSCOPE -> .)
    SEMICOLON       reduce using rule 6 (MYSCOPE -> .)
    REST            shift and go to state 18
    RECORD          shift and go to state 19
    NEXT            shift and go to state 20
    ALL             shift and go to state 21

    MYSCOPE                        shift and go to state 17

state 12

    (20) EXPRLIST -> EXPR .
    (21) EXPRLIST -> EXPR . COMMA EXPRLIST
    (24) EXPR -> EXPR . DIVIDE EXPR
    (25) EXPR -> EXPR . MULTIPLY EXPR
    (26) EXPR -> EXPR . MINUS EXPR
    (27) EXPR -> EXPR . PLUS EXPR
    REST            reduce using rule 20 (EXPRLIST -> EXPR .)
    RECORD          reduce using rule 20 (EXPRLIST -> EXPR .)
    NEXT            reduce using rule 20 (EXPRLIST -> EXPR .)
    ALL             reduce using rule 20 (EXPRLIST -> EXPR .)
    FOR             reduce using rule 20 (EXPRLIST -> EXPR .)
    WHILE           reduce using rule 20 (EXPRLIST -> EXPR .)
    TO              reduce using rule 20 (EXPRLIST -> EXPR .)
    TOARRAY         reduce using rule 20 (EXPRLIST -> EXPR .)
    NOOPTIMIZE      reduce using rule 20 (EXPRLIST -> EXPR .)
    SEMICOLON       reduce using rule 20 (EXPRLIST -> EXPR .)
    COMMA           shift and go to state 22
    DIVIDE          shift and go to state 23
    MULTIPLY        shift and go to state 24
    MINUS           shift and go to state 25
    PLUS            shift and go to state 26


state 13

    (23) EXPR -> OP . EXPR CP
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 27

state 14

    (28) EXPR -> IDENTIFIER .
    COMMA           reduce using rule 28 (EXPR -> IDENTIFIER .)
    DIVIDE          reduce using rule 28 (EXPR -> IDENTIFIER .)
    MULTIPLY        reduce using rule 28 (EXPR -> IDENTIFIER .)
    MINUS           reduce using rule 28 (EXPR -> IDENTIFIER .)
    PLUS            reduce using rule 28 (EXPR -> IDENTIFIER .)
    REST            reduce using rule 28 (EXPR -> IDENTIFIER .)
    RECORD          reduce using rule 28 (EXPR -> IDENTIFIER .)
    NEXT            reduce using rule 28 (EXPR -> IDENTIFIER .)
    ALL             reduce using rule 28 (EXPR -> IDENTIFIER .)
    FOR             reduce using rule 28 (EXPR -> IDENTIFIER .)
    WHILE           reduce using rule 28 (EXPR -> IDENTIFIER .)
    TO              reduce using rule 28 (EXPR -> IDENTIFIER .)
    TOARRAY         reduce using rule 28 (EXPR -> IDENTIFIER .)
    NOOPTIMIZE      reduce using rule 28 (EXPR -> IDENTIFIER .)
    SEMICOLON       reduce using rule 28 (EXPR -> IDENTIFIER .)
    CP              reduce using rule 28 (EXPR -> IDENTIFIER .)
    EQUAL           reduce using rule 28 (EXPR -> IDENTIFIER .)
    NEQ             reduce using rule 28 (EXPR -> IDENTIFIER .)
    LEQ             reduce using rule 28 (EXPR -> IDENTIFIER .)
    GEQ             reduce using rule 28 (EXPR -> IDENTIFIER .)
    GREATER         reduce using rule 28 (EXPR -> IDENTIFIER .)
    LESS            reduce using rule 28 (EXPR -> IDENTIFIER .)
    OR              reduce using rule 28 (EXPR -> IDENTIFIER .)
    AND             reduce using rule 28 (EXPR -> IDENTIFIER .)


state 15

    (29) EXPR -> NUMBER .
    COMMA           reduce using rule 29 (EXPR -> NUMBER .)
    DIVIDE          reduce using rule 29 (EXPR -> NUMBER .)
    MULTIPLY        reduce using rule 29 (EXPR -> NUMBER .)
    MINUS           reduce using rule 29 (EXPR -> NUMBER .)
    PLUS            reduce using rule 29 (EXPR -> NUMBER .)
    REST            reduce using rule 29 (EXPR -> NUMBER .)
    RECORD          reduce using rule 29 (EXPR -> NUMBER .)
    NEXT            reduce using rule 29 (EXPR -> NUMBER .)
    ALL             reduce using rule 29 (EXPR -> NUMBER .)
    FOR             reduce using rule 29 (EXPR -> NUMBER .)
    WHILE           reduce using rule 29 (EXPR -> NUMBER .)
    TO              reduce using rule 29 (EXPR -> NUMBER .)
    TOARRAY         reduce using rule 29 (EXPR -> NUMBER .)
    NOOPTIMIZE      reduce using rule 29 (EXPR -> NUMBER .)
    SEMICOLON       reduce using rule 29 (EXPR -> NUMBER .)
    CP              reduce using rule 29 (EXPR -> NUMBER .)
    EQUAL           reduce using rule 29 (EXPR -> NUMBER .)
    NEQ             reduce using rule 29 (EXPR -> NUMBER .)
    LEQ             reduce using rule 29 (EXPR -> NUMBER .)
    GEQ             reduce using rule 29 (EXPR -> NUMBER .)
    GREATER         reduce using rule 29 (EXPR -> NUMBER .)
    LESS            reduce using rule 29 (EXPR -> NUMBER .)
    OR              reduce using rule 29 (EXPR -> NUMBER .)
    AND             reduce using rule 29 (EXPR -> NUMBER .)


state 16

    (22) MYASSIGN -> IDENTIFIER ASSIGN EXPR .
    (24) EXPR -> EXPR . DIVIDE EXPR
    (25) EXPR -> EXPR . MULTIPLY EXPR
    (26) EXPR -> EXPR . MINUS EXPR
    (27) EXPR -> EXPR . PLUS EXPR
    SEMICOLON       reduce using rule 22 (MYASSIGN -> IDENTIFIER ASSIGN EXPR .)
    DIVIDE          shift and go to state 23
    MULTIPLY        shift and go to state 24
    MINUS           shift and go to state 25
    PLUS            shift and go to state 26


state 17

    (5) MYAVERAGE -> AVERAGE EXPRLIST MYSCOPE . MYFOR MYWHILE MYTO MYNOOPTIMIZE
    (11) MYFOR -> .
    (12) MYFOR -> . FOR CONDITIONEXPR
    WHILE           reduce using rule 11 (MYFOR -> .)
    TO              reduce using rule 11 (MYFOR -> .)
    TOARRAY         reduce using rule 11 (MYFOR -> .)
    NOOPTIMIZE      reduce using rule 11 (MYFOR -> .)
    SEMICOLON       reduce using rule 11 (MYFOR -> .)
    FOR             shift and go to state 29

    MYFOR                          shift and go to state 28

state 18

    (7) MYSCOPE -> REST .
    FOR             reduce using rule 7 (MYSCOPE -> REST .)
    WHILE           reduce using rule 7 (MYSCOPE -> REST .)
    TO              reduce using rule 7 (MYSCOPE -> REST .)
    TOARRAY         reduce using rule 7 (MYSCOPE -> REST .)
    NOOPTIMIZE      reduce using rule 7 (MYSCOPE -> REST .)
    SEMICOLON       reduce using rule 7 (MYSCOPE -> REST .)


state 19

    (8) MYSCOPE -> RECORD . NUMBERLIST
    (42) NUMBERLIST -> . NUMBER
    (43) NUMBERLIST -> . NUMBER COMMA NUMBERLIST
    NUMBER          shift and go to state 31

    NUMBERLIST                     shift and go to state 30

state 20

    (9) MYSCOPE -> NEXT . NUMBER
    NUMBER          shift and go to state 32


state 21

    (10) MYSCOPE -> ALL .
    FOR             reduce using rule 10 (MYSCOPE -> ALL .)
    WHILE           reduce using rule 10 (MYSCOPE -> ALL .)
    TO              reduce using rule 10 (MYSCOPE -> ALL .)
    TOARRAY         reduce using rule 10 (MYSCOPE -> ALL .)
    NOOPTIMIZE      reduce using rule 10 (MYSCOPE -> ALL .)
    SEMICOLON       reduce using rule 10 (MYSCOPE -> ALL .)


state 22

    (21) EXPRLIST -> EXPR COMMA . EXPRLIST
    (20) EXPRLIST -> . EXPR
    (21) EXPRLIST -> . EXPR COMMA EXPRLIST
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 12
    EXPRLIST                       shift and go to state 33

state 23

    (24) EXPR -> EXPR DIVIDE . EXPR
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 34

state 24

    (25) EXPR -> EXPR MULTIPLY . EXPR
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 35

state 25

    (26) EXPR -> EXPR MINUS . EXPR
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 36

state 26

    (27) EXPR -> EXPR PLUS . EXPR
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 13
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    EXPR                           shift and go to state 37

state 27

    (23) EXPR -> OP EXPR . CP
    (24) EXPR -> EXPR . DIVIDE EXPR
    (25) EXPR -> EXPR . MULTIPLY EXPR
    (26) EXPR -> EXPR . MINUS EXPR
    (27) EXPR -> EXPR . PLUS EXPR
    CP              shift and go to state 38
    DIVIDE          shift and go to state 23
    MULTIPLY        shift and go to state 24
    MINUS           shift and go to state 25
    PLUS            shift and go to state 26


state 28

    (5) MYAVERAGE -> AVERAGE EXPRLIST MYSCOPE MYFOR . MYWHILE MYTO MYNOOPTIMIZE
    (13) MYWHILE -> .
    (14) MYWHILE -> . WHILE CONDITIONEXPR
    TO              reduce using rule 13 (MYWHILE -> .)
    TOARRAY         reduce using rule 13 (MYWHILE -> .)
    NOOPTIMIZE      reduce using rule 13 (MYWHILE -> .)
    SEMICOLON       reduce using rule 13 (MYWHILE -> .)
    WHILE           shift and go to state 40

    MYWHILE                        shift and go to state 39

state 29

    (12) MYFOR -> FOR . CONDITIONEXPR
    (30) CONDITIONEXPR -> . OP CONDITIONEXPR CP
    (31) CONDITIONEXPR -> . CONDITIONEXPR OR CONDITIONEXPR
    (32) CONDITIONEXPR -> . CONDITIONEXPR AND CONDITIONEXPR
    (33) CONDITIONEXPR -> . EXPR EQUAL EXPR
    (34) CONDITIONEXPR -> . EXPR NEQ EXPR
    (35) CONDITIONEXPR -> . EXPR LEQ EXPR
    (36) CONDITIONEXPR -> . EXPR GEQ EXPR
    (37) CONDITIONEXPR -> . EXPR GREATER EXPR
    (38) CONDITIONEXPR -> . EXPR LESS EXPR
    (39) CONDITIONEXPR -> . NOT CONDITIONEXPR
    (40) CONDITIONEXPR -> . FALSE
    (41) CONDITIONEXPR -> . TRUE
    (23) EXPR -> . OP EXPR CP
    (24) EXPR -> . EXPR DIVIDE EXPR
    (25) EXPR -> . EXPR MULTIPLY EXPR
    (26) EXPR -> . EXPR MINUS EXPR
    (27) EXPR -> . EXPR PLUS EXPR
    (28) EXPR -> . IDENTIFIER
    (29) EXPR -> . NUMBER
    OP              shift and go to state 42
    NOT             shift and go to state 44
    FALSE           shift and go to state 45
    TRUE            shift and go to state 46
    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 15

    CONDITIONEXPR                  shift and go to state 41
    EXPR                           shift and go to state 43

state 30

    (8) MYSCOPE -> RECORD NUMBERLIST .
    FOR             reduce using rule 8 (MYSCOPE -> RECORD NUMBERLIST .)
    WHILE           reduce using rule 8 (MYSCOPE -> RECORD NUMBERLIST .)
    TO              reduce using rule 8 (MYSCOPE -> RECORD NUMBERLIST .)
    TOARRAY         reduce using rule 8 (MYSCOPE -> RECORD NUMBERLIST .)
    NOOPTIMIZE      reduce using rule 8 (MYSCOPE -> RECORD NUMBERLIST .)
    SEMICOLON       reduce using rule 8 (MYSCOPE -> RECORD NUMBERLIST .)


state 31

    (42) NUMBERLIST -> NUMBER .
    (43) NUMBERLIST -> NUMBER . COMMA NUMBERLIST
    FOR             reduce using rule 42 (NUMBERLIST -> NUMBER .)
    WHILE           reduce using rule 42 (NUMBERLIST -> NUMBER .)
    TO              reduce using rule 42 (NUMBERLIST -> NUMBER .)
    TOARRAY         reduce using rule 42 (NUMBERLIST -> NUMBER .)
    NOOPTIMIZE      reduce using rule 42 (NUMBERLIST -> NUMBER .)
    SEMICOLON       reduce using rule 42 (NUMBERLIST -> NUMBER .)
    COMMA           shift and go to state 47


state 32

    (9) MYSCOPE -> NEXT NUMBER .
    FOR             reduce using rule 9 (MYSCOPE -> NEXT NUMBER .)
    WHILE           reduce using rule 9 (MYSCOPE -> NEXT NUMBER .)
    TO              reduce using rule 9 (MYSCOPE -> NEXT NUMBER .)
    TOARRAY         reduce using rule 9 (MYSCOPE -> NEXT NUMBER .)
    NOOPTIMIZE      reduce using rule 9 (MYSCOPE -> NEXT NUMBER .)
    SEMICOLON       reduce using rule 9 (MYSCOPE -> NEXT NUMBER .)


state 33

    (21) EXPRLIST -> EXPR COMMA EXPRLIST .
    REST            reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    RECORD          reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    NEXT            reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    ALL             reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    FOR             reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    WHILE           reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    TO              reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    TOARRAY         reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    NOOPTIMIZE      reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)
    SEMICOLON       reduce using rule 21 (EXPRLIST -> EXPR COMMA EXPRLIST .)


state 34

    (24) EXPR -> EXPR DIVIDE EXPR .
    (24) EXPR -> EXPR . DIVIDE EXPR
    (25) EXPR -> EXPR . MULTIPLY EXPR
    (26) EXPR -> EXPR . MINUS EXPR
    (27) EXPR -> EXPR . PLUS EXPR
    COMMA           reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    DIVIDE          reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    MULTIPLY        reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    MINUS           reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    PLUS            reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    REST            reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    RECORD          reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    NEXT            reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    ALL             reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    FOR             reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    WHILE           reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    TO              reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    TOARRAY         reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    NOOPTIMIZE      reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    SEMICOLON       reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    CP              reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    EQUAL           reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    NEQ             reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    LEQ             reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    GEQ             reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    GREATER         reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    LESS            reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    OR              reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)
    AND             reduce using rule 24 (EXPR -> EXPR DIVIDE EXPR .)


state 35

    (25) EXPR -> EXPR MULTIPLY EXPR .
    (24) EXPR -> EXPR . DIVIDE EXPR
    (25) EXPR -> EXPR . MULTIPLY EXPR
    (26) EXPR -> EXPR . MINUS EXPR
    (27) EXPR -> EXPR . PLUS EXPR
    COMMA           reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    DIVIDE          reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    MULTIPLY        reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    MINUS           reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    PLUS            reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    REST            reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    RECORD          reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    NEXT            reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    ALL             reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    FOR             reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    WHILE           reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    TO              reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    TOARRAY         reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    NOOPTIMIZE      reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    SEMICOLON       reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    CP              reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    EQUAL           reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    NEQ             reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    LEQ             reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    GEQ             reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    GREATER         reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    LESS            reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    OR              reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)
    AND             reduce using rule 25 (EXPR -> EXPR MULTIPLY EXPR .)


state 36
